c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/define_void.c
int main(void) {
    // in our implementation, you can't declare void variables
    // the standard may let you _declare_ void variables
    // but you can't define them (or define any incomplete object)
    void x;
    return 0;
}